--- a/src/main/resources/static/recursos.html
+++ b/src/main/resources/static/recursos.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/i18n.css">
     <link rel="icon" href="data:,">
 </head>
 <body>
@@ -37,21 +38,11 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="materias.html" data-i18n="navbar.materias">Materias</a>
-
-
+                </li>
 
                 <!-- SELECTOR DE IDIOMA -->
                 <li class="nav-item">
-                    <div class="language-selector">
-                        <button class="btn-lang" id="btnLanguage">
-                            🌍 <span id="langLabel">ES</span>
-                        </button>
-                        <div class="lang-dropdown" id="langDropdown">
-                            <a href="#" data-lang="es">🇪🇸 Español</a>
-                            <a href="#" data-lang="en">🇺🇸 English</a>
-                            <a href="#" data-lang="fr">🇫🇷 Français</a>
-                        </div>
-                    </div>
+                    <div id="selector-idioma"></div>
                 </li>
             </ul>
         </div>
@@ -61,9 +52,9 @@
 <!-- Breadcrumb -->
 <div class="breadcrumb">
     <div class="container">
-        <a href="home.html">Inicio</a>
+        <a href="home.html" data-i18n="navbar.inicio">Inicio</a>
         <span class="separator">›</span>
-        <a href="materias.html">Materias</a>
+        <a href="materias.html" data-i18n="navbar.materias">Materias</a>
         <span class="separator">›</span>
         <span id="materiaNombre">Cargando...</span>
     </div>
@@ -73,14 +64,14 @@
 <main class="recursos-container">
     <div class="recursos-header">
         <div class="header-content">
-            <h1 id="tituloMateria">Recursos de la Materia</h1>
-            <p id="descripcionMateria">Explora y descarga los materiales disponibles</p>
+            <h1 id="tituloMateria" data-i18n="recursos.titulo">Recursos de la Materia</h1>
+            <p id="descripcionMateria" data-i18n="recursos.explora">Explora y descarga los materiales disponibles</p>
         </div>
         <button id="btnSubirRecurso" class="btn-primary" style="display: none;">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M12 5v14M5 12h14"/>
             </svg>
-            Subir Recurso
+            <span data-i18n="subir.titulo">Subir Recurso</span>
         </button>
     </div>
 
@@ -90,6 +81,7 @@
             <input
                     type="text"
                     id="searchInput"
+                    data-i18n="placeholder:recursos.buscar"
                     placeholder="Buscar recursos por título o descripción..."
                     autocomplete="off"
             >
@@ -103,7 +95,7 @@
     <!-- Loading Spinner -->
     <div id="loadingSpinner" class="loading-spinner">
         <div class="spinner"></div>
-        <p>Cargando recursos...</p>
+        <p data-i18n="recursos.cargando">Cargando recursos...</p>
     </div>
 
     <!-- Recursos Grid -->
@@ -112,26 +104,26 @@
     <!-- Empty State -->
     <div id="emptyState" class="empty-state" style="display: none;">
         <img src="assets/images/empty-states/sin_recursos.png" alt="Sin recursos">
-        <h3>No hay recursos disponibles</h3>
-        <p>Esta materia aún no tiene materiales subidos</p>
+        <h3 data-i18n="recursos.sin">No hay recursos disponibles</h3>
+        <p data-i18n="recursos.sinMensaje">Esta materia aún no tiene materiales subidos</p>
     </div>
 
     <!-- No Results State -->
     <div id="noResultsState" class="empty-state" style="display: none;">
         <img src="assets/images/empty-states/sin_resultados.png" alt="Sin resultados">
-        <h3>No se encontraron resultados</h3>
-        <p>Intenta con otros términos de búsqueda</p>
+        <h3 data-i18n="recursos.sinResultados">No se encontraron resultados</h3>
+        <p data-i18n="recursos.intentaOtros">Intenta con otros términos de búsqueda</p>
     </div>
 </main>
 
 <!-- Modal de Confirmación -->
 <div id="deleteModal" class="modal">
     <div class="modal-content">
-        <h3>¿Eliminar recurso?</h3>
-        <p>Esta acción no se puede deshacer. El archivo será eliminado permanentemente.</p>
+        <h3 data-i18n="recursos.eliminarTitulo">¿Eliminar recurso?</h3>
+        <p data-i18n="recursos.eliminarMensaje">Esta acción no se puede deshacer. El archivo será eliminado permanentemente.</p>
         <div class="modal-actions">
-            <button id="btnCancelar" class="btn-secondary">Cancelar</button>
-            <button id="btnConfirmarEliminar" class="btn-danger">Eliminar</button>
+            <button id="btnCancelar" class="btn-secondary" data-i18n="recursos.cancelar">Cancelar</button>
+            <button id="btnConfirmarEliminar" class="btn-danger" data-i18n="recursos.eliminar">Eliminar</button>
         </div>
     </div>
 </div>
@@ -139,14 +131,21 @@
 <!-- Bootstrap JS Bundle -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-
 <!-- Auth Module -->
 <script src="js/auth.js"></script>
 
 <!-- Recursos Script -->
 <script src="js/recursos.js"></script>
-
+<!-- i18n Module -->
+<script src="js/i18n.js"></script>
 <!-- Navbar & Language Script -->
-
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        // Inicializar selector de idioma
+        if (typeof i18n !== 'undefined') {
+            i18n.crearSelectorIdioma();
+        }
+    });
+</script>
 </body>
 </html>
