--- a/src/main/resources/static/subir-recurso.html
+++ b/src/main/resources/static/subir-recurso.html
@@ -14,6 +14,9 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/subir-recurso.css">
+    <link rel="stylesheet" href="css/i18n.css">
+
+    <link rel="icon" href="data:,">
 </head>
 <body>
 
@@ -31,24 +34,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto align-items-center gap-2">
                 <li class="nav-item">
-                    <a class="nav-link" href="home.html">Inicio</a>
+                    <a class="nav-link" href="home.html" data-i18n="navbar.inicio">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="materias.html">Materias</a>
+                    <a class="nav-link" href="materias.html" data-i18n="navbar.materias">Materias</a>
                 </li>
 
                 <!-- Selector de idioma -->
                 <li class="nav-item">
-                    <div class="language-selector">
-                        <button class="btn-lang" id="btnLanguage">
-                            🌍 <span id="langLabel">ES</span>
-                        </button>
-                        <div class="lang-dropdown" id="langDropdown">
-                            <a href="#" data-lang="es">🇪🇸 Español</a>
-                            <a href="#" data-lang="en">🇺🇸 English</a>
-                            <a href="#" data-lang="fr">🇫🇷 Français</a>
-                        </div>
-                    </div>
+                    <div id="selector-idioma"></div>
                 </li>
 
                 <!-- Dropdown de usuario -->
@@ -58,11 +52,11 @@
                             👤 <span id="userName">Usuario</span> ▼
                         </button>
                         <div class="dropdown-menu-custom" id="userDropdownMenu">
-                            <a href="perfil.html" class="dropdown-item">Mi Perfil</a>
+                            <a href="perfil.html" class="dropdown-item" data-i18n="navbar.perfil">Mi Perfil</a>
                             <a href="admin-dashboard.html" class="dropdown-item nav-admin" style="display: none;">Dashboard</a>
-                            <a href="subir-recurso.html" class="dropdown-item nav-docente nav-admin" style="display: none;">Subir Recurso</a>
+                            <a href="subir-recurso.html" class="dropdown-item nav-docente nav-admin" style="display: none;" data-i18n="subir.titulo">Subir Recurso</a>
                             <div class="dropdown-divider"></div>
-                            <button onclick="logout()" class="dropdown-item logout-btn">Cerrar Sesión</button>
+                            <button onclick="logout()" class="dropdown-item logout-btn" data-i18n="navbar.cerrarSesion">Cerrar Sesión</button>
                         </div>
                     </div>
                 </li>
@@ -85,8 +79,8 @@
                     <line x1="12" y1="3" x2="12" y2="15"/>
                 </svg>
             </div>
-            <h1>Subir Nuevo Recurso</h1>
-            <p>Comparte material educativo con tus estudiantes</p>
+            <h1 data-i18n="subir.titulo">Subir Nuevo Recurso</h1>
+            <p data-i18n="subir.descripcion">Comparte material educativo con tus estudiantes</p>
         </div>
 
         <!-- Alertas -->
@@ -101,18 +95,19 @@
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M4 7h16M4 12h16M4 17h10"/>
                     </svg>
-                    Título del Recurso
+                    <span data-i18n="subir.tituloRecurso">Título del Recurso</span>
                 </label>
                 <input
                         type="text"
                         class="form-control"
                         id="titulo"
                         name="titulo"
+                        data-i18n="placeholder:subir.tituloPlaceholder"
                         placeholder="Ejemplo: Guía de Álgebra Básica"
                         required
                         maxlength="200">
-                <div class="form-hint">Máximo 200 caracteres</div>
-                <div class="invalid-feedback">El título es obligatorio</div>
+                <div class="form-hint" data-i18n="subir.maxCaracteres">Máximo 200 caracteres</div>
+                <div class="invalid-feedback" data-i18n="subir.tituloRequerido">El título es obligatorio</div>
             </div>
 
             <!-- Descripción -->
@@ -121,20 +116,21 @@
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M12 20h9M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/>
                     </svg>
-                    Descripción
+                    <span data-i18n="subir.descripcionLabel">Descripción</span>
                 </label>
                 <textarea
                         class="form-control"
                         id="descripcion"
                         name="descripcion"
                         rows="4"
+                        data-i18n="placeholder:subir.descripcionPlaceholder"
                         placeholder="Describe brevemente el contenido del recurso..."
                         required
                         maxlength="500"></textarea>
                 <div class="form-hint">
-                    <span id="charCount">0</span>/500 caracteres
+                    <span id="charCount">0</span>/500 <span data-i18n="subir.caracteres">caracteres</span>
                 </div>
-                <div class="invalid-feedback">La descripción es obligatoria</div>
+                <div class="invalid-feedback" data-i18n="subir.descripcionRequerida">La descripción es obligatoria</div>
             </div>
 
             <!-- Materia -->
@@ -144,13 +140,13 @@
                         <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
                         <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
                     </svg>
-                    Materia
+                    <span data-i18n="subir.materia">Materia</span>
                 </label>
                 <select class="form-control" id="materiaId" name="materiaId" required>
-                    <option value="">Selecciona una materia...</option>
+                    <option value="" data-i18n="subir.seleccionaMateria">Selecciona una materia...</option>
                     <!-- Se cargarán dinámicamente -->
                 </select>
-                <div class="invalid-feedback">Debes seleccionar una materia</div>
+                <div class="invalid-feedback" data-i18n="subir.materiaRequerida">Debes seleccionar una materia</div>
             </div>
 
             <!-- Archivo PDF -->
@@ -160,7 +156,7 @@
                         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                         <polyline points="14 2 14 8 20 8"/>
                     </svg>
-                    Archivo PDF
+                    <span data-i18n="subir.archivo">Archivo PDF</span>
                 </label>
 
                 <!-- Drag & Drop Zone -->
@@ -182,15 +178,15 @@
                     </div>
 
                     <p class="upload-text">
-                        <strong>Arrastra tu archivo PDF aquí</strong><br>
-                        o haz clic para seleccionarlo
+                        <strong data-i18n="subir.arrastraArchivo">Arrastra tu archivo PDF aquí</strong><br>
+                        <span data-i18n="subir.oHazClic">o haz clic para seleccionarlo</span>
                     </p>
 
-                    <button type="button" class="btn-select-file" id="btnSelectFile">
+                    <button type="button" class="btn-select-file" id="btnSelectFile" data-i18n="subir.seleccionarArchivo">
                         Seleccionar Archivo
                     </button>
 
-                    <div class="upload-hint">Tamaño máximo: 10 MB</div>
+                    <div class="upload-hint" data-i18n="subir.tamañoMaximo">Tamaño máximo: 10 MB</div>
                 </div>
 
                 <!-- Vista previa del archivo -->
@@ -215,7 +211,7 @@
                     </div>
                 </div>
 
-                <div class="invalid-feedback">Debes seleccionar un archivo PDF</div>
+                <div class="invalid-feedback" data-i18n="subir.archivoRequerido">Debes seleccionar un archivo PDF</div>
             </div>
 
             <!-- Botones -->
@@ -225,7 +221,7 @@
                         <line x1="19" y1="12" x2="5" y2="12"/>
                         <polyline points="12 19 5 12 12 5"/>
                     </svg>
-                    Cancelar
+                    <span data-i18n="subir.cancelar">Cancelar</span>
                 </button>
 
                 <button type="submit" class="btn btn-primary" id="btnSubmit">
@@ -233,7 +229,7 @@
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <polyline points="20 6 9 17 4 12"/>
                         </svg>
-                        Subir Recurso
+                        <span data-i18n="subir.btnSubir">Subir Recurso</span>
                     </span>
                     <span id="btnSpinner" class="spinner-border spinner-border-sm" style="display: none;"></span>
                 </button>
@@ -250,26 +246,26 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 mb-4">
                 <h5>EduAventuras</h5>
-                <p>Plataforma educativa gratuita dedicada a brindar recursos de calidad.</p>
+                <p data-i18n="footer.descripcion">Plataforma educativa gratuita dedicada a brindar recursos de calidad.</p>
             </div>
             <div class="col-lg-2 col-md-6 mb-4">
-                <h5>Enlaces</h5>
+                <h5 data-i18n="footer.enlaces">Enlaces</h5>
                 <ul>
-                    <li><a href="home.html">Inicio</a></li>
-                    <li><a href="materias.html">Materias</a></li>
-                    <li><a href="login.html">Iniciar Sesión</a></li>
+                    <li><a href="home.html" data-i18n="navbar.inicio">Inicio</a></li>
+                    <li><a href="materias.html" data-i18n="navbar.materias">Materias</a></li>
+                    <li><a href="login.html" data-i18n="navbar.iniciarSesion">Iniciar Sesión</a></li>
                 </ul>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
-                <h5>Contacto</h5>
+                <h5 data-i18n="footer.contacto">Contacto</h5>
                 <ul>
                     <li><a href="mailto:info@eduaventuras.com">info@eduaventuras.com</a></li>
-                    <li><a href="#">Soporte</a></li>
+                    <li><a href="#" data-i18n="footer.soporte">Soporte</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 EduAventuras. Todos los derechos reservados.</p>
+            <p data-i18n="footer.derechos">&copy; 2024 EduAventuras. Todos los derechos reservados.</p>
         </div>
     </div>
 </footer>
@@ -278,6 +274,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/auth.js"></script>
 <script src="js/subir-recurso.js"></script>
+<!-- i18n Module -->
+<script src="js/i18n.js"></script>
 
 <script>
     // Dropdown de idiomas y usuario
@@ -313,6 +311,13 @@
         actualizarNavbar();
     });
 </script>
-
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        // Inicializar selector de idioma
+        if (typeof i18n !== 'undefined') {
+            i18n.crearSelectorIdioma();
+        }
+    });
+</script>
 </body>
 </html>
